RESOLVED FIXED276037
Setting allowsContentJavaScript=NO does not show <noscript> elements
https://bugs.webkit.org/show_bug.cgi?id=276037
Summary Setting allowsContentJavaScript=NO does not show <noscript> elements
Tim Horton
Reported 2024-06-29 13:56:58 PDT
Setting allowsContentJavaScript=NO does not show <noscript> elements
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-29 13:57:08 PDT
Tim Horton
Comment 2 2024-06-29 14:04:12 PDT
EWS
Comment 3 2024-07-01 11:40:31 PDT
Committed 280544@main (cc0631f6705a): <https://commits.webkit.org/280544@main> Reviewed commits have been landed. Closing PR #30307 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.